--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,13 +21,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: 10
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
+        cache: 'pnpm'
+
+    - name: Install Dependencies
+      run: pnpm install
+
     - run: npm run build --if-present
+
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v4
       with:
